// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component should render services 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "serviceMapEnabled": true,
        "ui": Object {
          "enabled": false,
        },
      },
      "core": Object {
        "application": Object {
          "capabilities": Object {
            "apm": Object {},
          },
          "currentAppId$": Observable {
            "_isScalar": false,
          },
        },
        "chrome": Object {
          "docTitle": Object {
            "change": [Function],
          },
          "setBadge": [Function],
          "setBreadcrumbs": [Function],
          "setHelpExtension": [Function],
        },
        "docLinks": Object {
          "DOC_LINK_VERSION": "0",
          "ELASTIC_WEBSITE_URL": "https://www.elastic.co/",
        },
        "http": Object {
          "basePath": Object {
            "prepend": [Function],
          },
        },
        "i18n": Object {
          "Context": [Function],
        },
        "notifications": Object {
          "toasts": Object {
            "addDanger": [Function],
            "addWarning": [Function],
          },
        },
        "uiSettings": Object {
          "get": [Function],
          "get$": [Function],
        },
      },
      "plugins": Object {},
    }
  }
>
  <Home
    tab="services"
  />
</ContextProvider>
`;

exports[`Home component should render traces 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "serviceMapEnabled": true,
        "ui": Object {
          "enabled": false,
        },
      },
      "core": Object {
        "application": Object {
          "capabilities": Object {
            "apm": Object {},
          },
          "currentAppId$": Observable {
            "_isScalar": false,
          },
        },
        "chrome": Object {
          "docTitle": Object {
            "change": [Function],
          },
          "setBadge": [Function],
          "setBreadcrumbs": [Function],
          "setHelpExtension": [Function],
        },
        "docLinks": Object {
          "DOC_LINK_VERSION": "0",
          "ELASTIC_WEBSITE_URL": "https://www.elastic.co/",
        },
        "http": Object {
          "basePath": Object {
            "prepend": [Function],
          },
        },
        "i18n": Object {
          "Context": [Function],
        },
        "notifications": Object {
          "toasts": Object {
            "addDanger": [Function],
            "addWarning": [Function],
          },
        },
        "uiSettings": Object {
          "get": [Function],
          "get$": [Function],
        },
      },
      "plugins": Object {},
    }
  }
>
  <Home
    tab="traces"
  />
</ContextProvider>
`;
